deployments/null-cloud/base/ui/base/deployment.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: web
  labels:
    name: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nullcloud-ui
spec:
  selector:
    matchLabels:
      app: nullcloud-ui
  template:
    metadata:
      labels:
        app: nullcloud-ui
    spec:
      containers: 
      - name: nullcloud-ui
        image: nullchannel/nullcloud-ui:8527d041ee72ee474b55819f11a70262053ec514
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
