deployments/null-cloud/base/ui/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: eddington-ui
spec:
  selector:
    app: eddington-ui
  ports:
  - port: 80
    targetPort: 80
