deployments/null-cloud/base/ui/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nullcloud-ui-vitrual-service 
spec:
  hosts:
  - "*"
  gateways:
  - nullcloud-gateway
  http:
  - route:
    - destination:
        host: nullcloud-ui
        port:
          number: 80
